5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1834_2602.log
== SUBMITION (2019-07-09 14:38:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(
y = array([[2,1,4],[1,2,0],[2,3,2]])

a = dot(inv(y),x.T)
print("estafilococo: ",round(a[0],1))
print("salmonela: ",round(a[1],1))
print("coli: ",round(a[2],1))

if a[0] == min(a):
	print("estafilococo")
elif a[1] == min(a):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.802649
-- ERROR:
  File "/home/codebench/codes/1834/2602/main.py", line 7
    a = dot(inv(y),x.T)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:38:18) 
-- CODE:
from numpy import *
from numpy.linalg import *


y = array([[2,1,4],[1,2,0],[2,3,2]])

a = dot(inv(y),x.T)
print("estafilococo: ",round(a[0],1))
print("salmonela: ",round(a[1],1))
print("coli: ",round(a[2],1))

if a[0] == min(a):
	print("estafilococo")
elif a[1] == min(a):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.915627
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 7, in <module>
    a = dot(inv(y),x.T)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:38:29) 
-- CODE:
from numpy import *
from numpy.linalg import *


y = array([[2,1,4],[1,2,0],[2,3,2]])

a = dot(inv(y),x.T)
print("estafilococo: ",round(a[0],1))
print("salmonela: ",round(a[1],1))
print("coli: ",round(a[2],1))

if a[0] == min(a):
	print("estafilococo")
elif a[1] == min(a):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.10673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 7, in <module>
    a = dot(inv(y),x.T)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:38:32) 
-- CODE:
from numpy import *
from numpy.linalg import *


y = array([[2,1,4],[1,2,0],[2,3,2]])

a = dot(inv(y),x.T)
print("estafilococo: ",round(a[0],1))
print("salmonela: ",round(a[1],1))
print("coli: ",round(a[2],1))

if a[0] == min(a):
	print("estafilococo")
elif a[1] == min(a):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
1.03229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2602/main.py", line 7, in <module>
    a = dot(inv(y),x.T)
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 14:38:55) 
-- CODE:
from numpy import *
from numpy.linalg import *

x = array(eval(input("jsbie:")))
y = array([[2,1,4],[1,2,0],[2,3,2]])

a = dot(inv(y),x.T)
print("estafilococo: ",round(a[0],1))
print("salmonela: ",round(a[1],1))
print("coli: ",round(a[2],1))

if a[0] == min(a):
	print("estafilococo")
elif a[1] == min(a):
	print("salmonela")
else:
	print("coli")
-- EXECUTION TIME:
0.99356
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
